syntax = "proto3";
option go_package = "pipeline";

import "google/protobuf/descriptor.proto";

// Description of the primitive.
message Primitive {
    string id = 1;
    string version = 2;
    string python_path = 3;
    string name = 4;
    // Digest is optional, because some locally registered primitives might not have it.
    // But for all primitives published it is available and it should be provided here as well.
    string digest = 5;
}
